--- a/mc_config.json
+++ b/mc_config.json
@@ -5,6 +5,7 @@
     "dimension": "overworld",
     "blockOffset": 4,
     "tickInterval": 100,
+    "isDynamicRepeater": true,
     "channels": [
         { "instrument": "harp", "block": "podzol" },
         { "instrument": "bass", "block": "stripped_warped_hyphae" },
