--- a/midi_config.json
+++ b/midi_config.json
@@ -1,10 +1,8 @@
 {
     "deviceID": 1,
-
-
+    
     "firstChannel": 144,
     "nextKey": 21,
     "stopKey": 108,
-    "minKey": 54,
-    "maxKey": 78
+    "minKey": 54
 }
